# controllers/user.go
@@ -1,13 +1,14 @@
 package controllers
 
 import (
-	"go-task/go-task/models"
 	"encoding/json"
+	"go-task/models"
+	"strconv"
 
 	"github.com/astaxie/beego"
 )
 
-// Operations about Users
+// User
 type UserController struct {
 	beego.Controller
 }
@@ -18,102 +19,89 @@ type UserController struct {
 // @Success 200 {int} models.User.Id
 // @Failure 403 body is empty
 // @router / [post]
-func (u *UserController) Post() {
+func (this *UserController) Post() {
 	var user models.User
-	json.Unmarshal(u.Ctx.Input.RequestBody, &user)
-	uid := models.AddUser(user)
-	u.Data["json"] = map[string]string{"uid": uid}
-	u.ServeJSON()
-}
-
-// @Title GetAll
-// @Description get all Users
-// @Success 200 {object} models.User
-// @router / [get]
-func (u *UserController) GetAll() {
-	users := models.GetAllUsers()
-	u.Data["json"] = users
-	u.ServeJSON()
-}
-
-// @Title Get
-// @Description get user by uid
-// @Param	uid		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.User
-// @Failure 403 :uid is empty
-// @router /:uid [get]
-func (u *UserController) Get() {
-	uid := u.GetString(":uid")
-	if uid != "" {
-		user, err := models.GetUser(uid)
-		if err != nil {
-			u.Data["json"] = err.Error()
-		} else {
-			u.Data["json"] = user
-		}
+	json.Unmarshal(this.Ctx.Input.RequestBody, &user)
+	id, err := models.AddUser(&user)
+	if err == nil {
+		this.Data["json"] = map[string]int64{"id": id}
+		this.Ctx.Output.SetStatus(201)
+	} else {
+		this.Data["json"] = err.Error()
+		this.Ctx.Output.SetStatus(422)
 	}
-	u.ServeJSON()
+	this.ServeJSON()
+}
+
+// @Title Get Detail of User
+// @Description get User by id
+// @Param id    path  string  true    "The key for staticblock"
+// @Success 200 {object} models.User
+// @Failure 403 :id is empty
+// @router /:id [get]
+func (this *UserController) GetOne() {
+	idStr := this.Ctx.Input.Param(":id")
+	id, _ := strconv.Atoi(idStr)
+	u, err := models.ShowUser(id)
+	if err != nil {
+		this.Data["json"] = map[string]string{"error": "User Not Found."}
+		this.Ctx.Output.SetStatus(404)
+	} else {
+		this.Data["json"] = u
+	}
+	this.ServeJSON()
+}
+
+// @Title Get All User
+// @Description Get All User
+// @Param fields  query string  false "Fields returned. e.g. col1,col2 ..."
+// @Success 200 {object} models.User
+// @Failure 403
+// @router / [get]
+func (this *UserController) GetAll() {
+	var fields []string
+	l, err := models.GetAllUser(fields)
+	if err != nil {
+		this.Data["json"] = err.Error()
+	} else {
+		this.Data["json"] = l
+	}
+	this.ServeJSON()
 }
 
 // @Title Update
 // @Description update the user
-// @Param	uid		path 	string	true		"The uid you want to update"
-// @Param	body		body 	models.User	true		"body for user content"
+// @Param id    path  int  true    "The id you want to update"
+// @Param body    body  models.User true    "body for Task content"
 // @Success 200 {object} models.User
-// @Failure 403 :uid is not int
-// @router /:uid [put]
-func (u *UserController) Put() {
-	uid := u.GetString(":uid")
-	if uid != "" {
-		var user models.User
-		json.Unmarshal(u.Ctx.Input.RequestBody, &user)
-		uu, err := models.UpdateUser(uid, &user)
-		if err != nil {
-			u.Data["json"] = err.Error()
-		} else {
-			u.Data["json"] = uu
-		}
-	}
-	u.ServeJSON()
-}
-
-// @Title Delete
-// @Description delete the user
-// @Param	uid		path 	string	true		"The uid you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 uid is empty
-// @router /:uid [delete]
-func (u *UserController) Delete() {
-	uid := u.GetString(":uid")
-	models.DeleteUser(uid)
-	u.Data["json"] = "delete success!"
-	u.ServeJSON()
-}
-
-// @Title Login
-// @Description Logs user into the system
-// @Param	username		query 	string	true		"The username for login"
-// @Param	password		query 	string	true		"The password for login"
-// @Success 200 {string} login success
-// @Failure 403 user not exist
-// @router /login [get]
-func (u *UserController) Login() {
-	username := u.GetString("username")
-	password := u.GetString("password")
-	if models.Login(username, password) {
-		u.Data["json"] = "login success"
+// @Failure 403 :id is not int
+// @router /:id [put]
+func (this *UserController) Put() {
+	idStr := this.Ctx.Input.Param(":id")
+	id, _ := strconv.Atoi(idStr)
+	v := models.User{Id: id}
+	json.Unmarshal(this.Ctx.Input.RequestBody, &v)
+	if err := models.UpdateUser(&v); err == nil {
+		this.Data["json"] = "OK"
 	} else {
-		u.Data["json"] = "user not exist"
+		this.Data["json"] = err.Error()
 	}
-	u.ServeJSON()
+	this.ServeJSON()
 }
 
-// @Title logout
-// @Description Logs out current logged in user session
-// @Success 200 {string} logout success
-// @router /logout [get]
-func (u *UserController) Logout() {
-	u.Data["json"] = "logout success"
-	u.ServeJSON()
+// @Title Delete User
+// @Description delete user
+// @Param id    path  string  true    "The id you want to delete"
+// @Success 200 {string} delete success!
+// @Failure 403 id is empty
+// @router /:id [delete]
+func (this *UserController) Delete() {
+	idStr := this.Ctx.Input.Param(":id")
+	id, _ := strconv.Atoi(idStr)
+	if err := models.DestroyUser(id); err == nil {
+		this.Data["json"] = "OK"
+	} else {
+		this.Data["json"] = err.Error()
+	}
+	this.ServeJSON()
 }
-
